--- a/backend/package.json
+++ b/backend/package.json
@@ -43,6 +43,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
+    "google-auth-library": "^8.9.0",
     "http-status": "^1.6.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.3.0",
