--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,10 +43,12 @@
     "cmdk": "^0.2.0",
     "date-fns": "^2.30.0",
     "firebase": "^10.0.0",
+    "gapi-script": "^1.2.0",
     "lucide-react": "^0.233.0",
     "react": "^18.2.0",
     "react-day-picker": "^8.7.1",
     "react-dom": "^18.2.0",
+    "react-google-login": "^5.2.2",
     "react-hook-form": "^7.45.1",
     "react-icons": "^4.9.0",
     "react-redux": "^8.0.5",
