--- a/backend/package.json
+++ b/backend/package.json
@@ -47,6 +47,8 @@
     "http-status": "^1.6.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.3.0",
+    "winston": "^3.10.0",
+    "winston-daily-rotate-file": "^4.7.1",
     "zod": "^3.21.4"
   }
 }
